[tool.poetry]
name = "pytsas"
version = "0.1.0"
description = "Package for python time-series analyses"
authors = ["mk.fschr <mike.robin.fischer@web.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
